# rustsni

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
examples/: menu_dumper.rs  simple_watcher.rs
protocols/: org.kde.StatusNotifierWatcher.xml
src/: host.rs  icon.rs  item.rs  lib.rs  menu.rs  watcher.rs
