[package]
name = "rustsni"
version = "0.1.0"
edition = "2024"
description = "A poll-friendly StatusNotifierItem host library built on rustbus"
license = "MIT"
repository = "https://github.com/acd407/sni-watcher"
readme = "README.md"
keywords = ["status-notifier", "dbus", "sni", "system-tray"]
categories = ["api-bindings"]

[dependencies]
rustbus = "0.19.3"
thiserror = "2"
